website/versioned_docs/version-2.0.0-alpha.16/node-client.md
---
id: version-2.0.0-alpha.16-node-client
title: node-client package
hide_title: true
original_id: node-client
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## node-client package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./node-client.authcontainer.md) |  |
|  [BaseAPIClient](./node-client.baseapiclient.md) |  |
|  [Container](./node-client.container.md) |  |
|  [GlobalJSONContainerStorage](./node-client.globaljsoncontainerstorage.md) |  |
|  [ImageProcessingPipelineBuilder](./node-client.imageprocessingpipelinebuilder.md) |  |
|  [MemoryStorageDriver](./node-client.memorystoragedriver.md) |  |
|  [MFAContainer](./node-client.mfacontainer.md) |  |
|  [NodeAPIClient](./node-client.nodeapiclient.md) |  |
|  [NodeAssetContainer](./node-client.nodeassetcontainer.md) |  |
|  [NodeContainer](./node-client.nodecontainer.md) |  |
|  [SkygearError](./node-client.skygearerror.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [decodeAuthenticator(a)](./node-client.decodeauthenticator.md) |  |
|  [decodeAuthResponse(r)](./node-client.decodeauthresponse.md) |  |
|  [decodeError(err)](./node-client.decodeerror.md) |  |
|  [decodeIdentity(i)](./node-client.decodeidentity.md) |  |
|  [decodeSession(s)](./node-client.decodesession.md) |  |
|  [decodeUser(u)](./node-client.decodeuser.md) |  |
|  [encodeIdentity(i)](./node-client.encodeidentity.md) |  |
|  [encodeQuery(query)](./node-client.encodequery.md) |  |
|  [encodeQueryComponent(s)](./node-client.encodequerycomponent.md) |  |
|  [encodeUser(u)](./node-client.encodeuser.md) |  |
|  [generateOTPAuthURI(options)](./node-client.generateotpauthuri.md) |  |
|  [getDeviceName()](./node-client.getdevicename.md) |  |
|  [isMFARequiredError(e)](./node-client.ismfarequirederror.md) |  |
|  [isValidationError(err)](./node-client.isvalidationerror.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ActivateOOBResult](./node-client.activateoobresult.md) |  |
|  [ActivateTOTPResult](./node-client.activatetotpresult.md) |  |
|  [AuthenticateWithOOBOptions](./node-client.authenticatewithooboptions.md) |  |
|  [AuthenticateWithTOTPOptions](./node-client.authenticatewithtotpoptions.md) |  |
|  [AuthenticationSession](./node-client.authenticationsession.md) |  |
|  [AuthResponse](./node-client.authresponse.md) |  |
|  [ContainerOptions](./node-client.containeroptions.md) |  |
|  [ContainerStorage](./node-client.containerstorage.md) |  |
|  [CreateNewOOBEmailOptions](./node-client.createnewoobemailoptions.md) |  |
|  [CreateNewOOBResult](./node-client.createnewoobresult.md) |  |
|  [CreateNewOOBSMSOptions](./node-client.createnewoobsmsoptions.md) |  |
|  [CreateNewTOTPOptions](./node-client.createnewtotpoptions.md) |  |
|  [CreateNewTOTPResult](./node-client.createnewtotpresult.md) |  |
|  [CustomTokenIdentity](./node-client.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./node-client.extrasessioninfooptions.md) |  |
|  [GenerateOTPAuthURIOptions](./node-client.generateotpauthurioptions.md) |  |
|  [ImageProcessingPipelineBuilderResizeOptions](./node-client.imageprocessingpipelinebuilderresizeoptions.md) |  |
|  [OAuthIdentity](./node-client.oauthidentity.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./node-client.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./node-client.oauthwebredirectauthorizationurloptions.md) |  |
|  [OOBEmailAuthenticator](./node-client.oobemailauthenticator.md) |  |
|  [OOBSMSAuthenticator](./node-client.oobsmsauthenticator.md) |  |
|  [PasswordIdentity](./node-client.passwordidentity.md) |  |
|  [Session](./node-client.session.md) |  |
|  [SessionUserAgent](./node-client.sessionuseragent.md) |  |
|  [SSOLoginOptions](./node-client.ssologinoptions.md) |  |
|  [StorageDriver](./node-client.storagedriver.md) |  |
|  [TOTPAuthenticator](./node-client.totpauthenticator.md) |  |
|  [UploadAssetOptions](./node-client.uploadassetoptions.md) |  |
|  [User](./node-client.user.md) |  |
|  [ValidationError](./node-client.validationerror.md) |  |
|  [ValidationErrorCauseBase](./node-client.validationerrorcausebase.md) |  |
|  [ValidationErrorExpectationDetails](./node-client.validationerrorexpectationdetails.md) |  |
|  [ValidationErrorFormatDetails](./node-client.validationerrorformatdetails.md) |  |
|  [ValidationErrorRangeDetails](./node-client.validationerrorrangedetails.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultContainer](./node-client.defaultcontainer.md) |  |
|  [SkygearErrorNames](./node-client.skygearerrornames.md) |  |
|  [ValidationErrorKinds](./node-client.validationerrorkinds.md) |  |
|  [VERSION](./node-client.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Authenticator](./node-client.authenticator.md) |  |
|  [CreateNewOOBOptions](./node-client.createnewooboptions.md) |  |
|  [Identity](./node-client.identity.md) |  |
|  [JSONObject](./node-client.jsonobject.md) |  |
|  [JSONValue](./node-client.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./node-client.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./node-client.skygearerrorname.md) |  |
|  [ValidationErrorCause](./node-client.validationerrorcause.md) |  |
|  [ValidationErrorKind](./node-client.validationerrorkind.md) |  |
|  [ValidationInvalidConstantCause](./node-client.validationinvalidconstantcause.md) |  |
|  [ValidationInvalidEntryAmountCause](./node-client.validationinvalidentryamountcause.md) |  |
|  [ValidationInvalidEnumCause](./node-client.validationinvalidenumcause.md) |  |
|  [ValidationInvalidNumberRangeCause](./node-client.validationinvalidnumberrangecause.md) |  |
|  [ValidationInvalidStringFormatCause](./node-client.validationinvalidstringformatcause.md) |  |
|  [ValidationInvalidStringLengthCause](./node-client.validationinvalidstringlengthcause.md) |  |
|  [ValidationInvalidTypeCause](./node-client.validationinvalidtypecause.md) |  |

